add: exceptions thrown when project not found, add: EmptyListException. refactor: service to throw exceptions